FinalYearProject-AndroidApp-main/build_log_4.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:compileDebugAidl NO-SOURCE
> Task :app:compileDebugRenderscript NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
warning: [options] source value 8 is obsolete and will be removed in a future release
warning: [options] target value 8 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:79: error: class, interface, or enum expected
    private void setLoading(boolean isLoading) {
            ^
C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:81: error: class, interface, or enum expected
        binding.btnLogin.setVisibility(isLoading ? View.GONE : View.VISIBLE);
        ^
C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:82: error: class, interface, or enum expected
        binding.tvError.setVisibility(View.GONE);
        ^
C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:83: error: class, interface, or enum expected
    }
    ^
C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:87: error: class, interface, or enum expected
        binding.tvError.setVisibility(View.VISIBLE);
        ^
C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:88: error: class, interface, or enum expected
    }
    ^
6 errors
3 warnings

[Incubating] Problems report is available at: file:///C:/Users/pujak/OneDrive/Desktop/android%20app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:79: error: class, interface, or enum expected
      private void setLoading(boolean isLoading) {
              ^
  C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:81: error: class, interface, or enum expected
          binding.btnLogin.setVisibility(isLoading ? View.GONE : View.VISIBLE);
          ^
  C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:82: error: class, interface, or enum expected
          binding.tvError.setVisibility(View.GONE);
          ^
  C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:83: error: class, interface, or enum expected
      }
      ^
  C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:87: error: class, interface, or enum expected
          binding.tvError.setVisibility(View.VISIBLE);
          ^
  C:\Users\pujak\OneDrive\Desktop\android app\app\src\main\java\com\example\attendance\ui\LoginActivity.java:88: error: class, interface, or enum expected
      }
      ^warning: [options] source value 8 is obsolete and will be removed in a future releasewarning: [options] target value 8 is obsolete and will be removed in a future release
  6 errors
  3 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.12/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 10s
15 actionable tasks: 1 executed, 14 up-to-date
